syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.example.AlmaOnline.server";
option java_outer_classname = "AlmaOnlineProto";
option objc_class_prefix = "AO";

package almaonline;

service AlmaOnline {
  rpc GetRestaurants(GetRestaurantsRequest) returns (GetRestaurantsResponse) {}
  rpc GetMenu(GetMenuRequest) returns (GetMenuResponse) {}
}

message GetRestaurantsRequest {}

message GetRestaurantResponse {
  string id = 1;
  string name = 2;
}

message GetRestaurantsResponse {
  repeated GetRestaurantResponse restaurantInfoList = 1;
}

message GetMenuResponse {
  repeated GetMenuItem restaurantItems = 1;
}

message GetMenuItem {
  string itemname = 1;
  double itemprice = 2;
}

message GetMenuRequest {
  string restaurantId = 1;
}
